WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281048
[JSC][WASM] Wrong label for try_table on CPU(NEEDS_ALIGNED_ACCESS)
https://bugs.webkit.org/show_bug.cgi?id=281048
Summary
[JSC][WASM] Wrong label for try_table on CPU(NEEDS_ALIGNED_ACCESS)
Max Rottenkolber
Reported
2024-10-08 04:38:00 PDT
The handler label for try_table on CPU(NEEDS_ALIGNED_ACCESS) points to the padding generated by alignWideOpcode32 instead of the correct bytecode.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-10-08 10:21:59 PDT
Committed
284834@main
(65d57a732223): <
https://commits.webkit.org/284834@main
> Reviewed commits have been landed. Closing PR #34833 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2024-10-08 10:22:20 PDT
<
rdar://problem/137519685
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug