[JSC][WASM] Fix handler label for try_table on CPU(NEEDS_ALIGNED_ACCESS) https://bugs.webkit.org/show_bug.cgi?id=281048

Reviewed by Yusuke Suzuki.

This aligns the bytecode index manually before emitting the handler label.

* Source/JavaScriptCore/wasm/WasmLLIntGenerator.cpp:
(JSC::Wasm::LLIntGenerator::endTryTable):

Canonical link: https://commits.webkit.org/284834@main